--- a/codigo/indexTest.html
+++ b/codigo/indexTest.html
@@ -32,6 +32,7 @@
         <li>Entretenimento</li>
         <li>Acessorios</li>
         <li>Suporte</li>
+
         <li>
           <svg xmlns="http://www.w3.org/2000/svg" <!-- width="15px" -->
             height="44px" viewBox="0 0 15 44" >
@@ -57,7 +58,18 @@
     </nav>
 
     <main>
-      <h1>Pulseira loop esportiva azul-inverno para caixa de 45 mm</h1>
+      <section id="produto">
+        <div id="opcoes-produto">
+          <h1>Pulseira loop esportiva azul-inverno para caixa de 45 mm</h1>
+
+          <div class="preco">
+            <p>id="precos">R$ 499,90</p>
+            <a id="parcelas"> Em até 12x de R$ 41,58</a>
+            <p id="a-vista">R$ 449,10 à vista (10% de desconto)</p>
+          </div>
+        </div>
+        <div id="visualizacao"></div>
+      </section>
     </main>
   </body>
 </html>
